Fix styling issues - preserve images' aspect ratio & white space inside description, - align elements [name, price, buttons] in `products-list` items, - reset `flex` property on textarea to allow vertical resizing

--- a/ex-2-express-basics/public/css/product-form.css
+++ b/ex-2-express-basics/public/css/product-form.css
@@ -31,9 +31,12 @@
 	background: none;
 	border: none;
 	border-bottom: 1px solid var(--main-dark);
-	flex: 1;
 	font: inherit;
 	min-width: 20rem;
+}
+
+.product-form-group__input {
+	flex: 1;
 }
 
 .product-form-group__textarea {
